--- a/056_Sorting/95_Docvalues.asciidoc
+++ b/056_Sorting/95_Docvalues.asciidoc
@@ -7,9 +7,9 @@
 
 * 在搜索的时候，我们能通过搜索关键词快速得到结果集。
 
-* 当排序的时候，我们需要倒排索引里面某个字段值的集合。换句话说，我们需要  ``倒置`` 倒排索引。
+* 当排序的时候，我们需要倒排索引里面某个字段值的集合。换句话说，我们需要 `倒置` 倒排索引。
 
-``倒置`` 结构在其他系统中经常被称作 ``列存储`` 。实质上，它将所有单字段的值存储在单数据列中，这使得对其进行操作是十分高效的，例如排序。
+`倒置` 结构在其他系统中经常被称作 `列存储` 。实质上，它将所有单字段的值存储在单数据列中，这使得对其进行操作是十分高效的，例如排序。
 
 在 Elasticsearch 中，doc values 就是一种列式存储结构，默认情况下每个字段的 doc values 都是激活的，doc values 是在索引时创建的，当字段索引时，Elasticsearch 为了能够快速检索，会把字段的值加入倒排索引中，同时它也会存储该字段的 doc values。
 
