--- a/300_Aggregations/93_technical_docvalues.asciidoc
+++ b/300_Aggregations/93_technical_docvalues.asciidoc
@@ -4,7 +4,7 @@
 在上一节一开头我们就说 `Doc Values` 是 _"快速、高效并且内存友好"_ 。
 这个口号听不起来不错，不过话说回来 `Doc Values` 到底是如何工作的呢？
 
-`Doc Values` 是在索引时与倒排索引同时生成。也就是说 `Doc Values` 和`倒排索引`一样，基于 `Segement` 生成并且是不可变的。同时 `Doc Values` 和`倒排索引`一样序列化到磁盘，这样对性能和扩展性有很大帮助。
+`Doc Values` 是在索引时与 `倒排索引` 同时生成。也就是说 `Doc Values` 和 `倒排索引` 一样，基于 `Segement` 生成并且是不可变的。同时 `Doc Values` 和 `倒排索引` 一样序列化到磁盘，这样对性能和扩展性有很大帮助。
 
 `Doc Values` 通过序列化把数据结构持久化到磁盘，我们可以充分利用操作系统的内存，而不是 `JVM` 的 `Heap` 。
 当 `working set` 远小于系统的可用内存，系统会自动将 `Doc Values` 保存在内存中，使得其读写十分高速； 
