--- a/300_Aggregations/93_technical_docvalues.asciidoc
+++ b/300_Aggregations/93_technical_docvalues.asciidoc
@@ -8,7 +8,7 @@
 
 `Doc Values` 通过序列化把数据结构持久化到磁盘，我们可以充分利用操作系统的内存，而不是 `JVM` 的 `Heap` 。
 当 `working set` 远小于系统的可用内存，系统会自动将 `Doc Values` 保存在内存中，使得其读写十分高速； 
-不过，当其远大于可用内存时，操作系统会自动把 `Doc Values` 写入磁盘。很显然，这样性能会比在内存中差很多，但是它的大小就不再局限于服务器的内存了。如果是使用 `JVM` 的 `Heap` 来实现那么只能是因为 `OutOfMemory` 导致程序崩溃了。  
+不过，当其远大于可用内存时，系统会根据需求把 `Doc Values` 写入或读出磁盘。很显然，这样性能会比在内存中差很多，但是它的大小就不再局限于服务器的内存了。如果是使用 `JVM` 的 `Heap` 来实现那么只能是因为 `OutOfMemory` 导致程序崩溃了。  
 [NOTE]
 ====
 因为 `Doc Values` 不是由 `JVM` 来管理，所以 `Elasticsearch` 实例可以配置一个很小的 `JVM Heap`，这样给系统留出来更多的内存。同时更小的  `Heap` 可以让 `JVM` 更加快速和高效的回收。
