--- a/300_Aggregations/93_technical_docvalues.asciidoc
+++ b/300_Aggregations/93_technical_docvalues.asciidoc
@@ -7,8 +7,7 @@
 `Doc Values` 是在索引时与 `倒排索引` 同时生成。也就是说 `Doc Values` 和 `倒排索引` 一样，基于 `Segement` 生成并且是不可变的。同时 `Doc Values` 和 `倒排索引` 一样序列化到磁盘，这样对性能和扩展性有很大帮助。
 
 `Doc Values` 通过序列化把数据结构持久化到磁盘，我们可以充分利用操作系统的内存，而不是 `JVM` 的 `Heap` 。
-当 `working set` 远小于系统的可用内存，系统会自动将 `Doc Values` 保存在内存中，使得其读写十分高速； 
-不过，当其远大于可用内存时，系统会根据需求把 `Doc Values` 写入或读出磁盘。很显然，这样性能会比在内存中差很多，但是它的大小就不再局限于服务器的内存了。如果是使用 `JVM` 的 `Heap` 来实现那么只能是因为 `OutOfMemory` 导致程序崩溃了。  
+当 `working set` 远小于系统的可用内存，系统会自动将 `Doc Values` 驻留在内存中，使得其读写十分快速；不过，当其远大于可用内存时，系统会根据需要从磁盘读取 `Doc Values`，然后选择性放到分页缓存中。很显然，这样性能会比在内存中差很多，但是它的大小就不再局限于服务器的内存了。如果是使用 `JVM` 的 `Heap` 来实现那么只能是因为 `OutOfMemory` 导致程序崩溃了。  
 [NOTE]
 ====
 因为 `Doc Values` 不是由 `JVM` 来管理，所以 `Elasticsearch` 实例可以配置一个很小的 `JVM Heap`，这样给系统留出来更多的内存。同时更小的  `Heap` 可以让 `JVM` 更加快速和高效的回收。
